test/implicitDup25_1.slq

def main(){
	x:=H(0);
	y:=dup(x);
	z:=y;
	measure(x);
	return (y,z); /// error
}
